--- a/Project.ipynb
+++ b/Project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Project",
       "provenance": [],
-      "authorship_tag": "ABX9TyN8Uh6lhPxe/D0N0A3N5WQj",
+      "authorship_tag": "ABX9TyPACD8Lx/oWzG2XAM9Jdnd1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,18 @@
       },
       "source": [
         "#Introduction\n",
-        "Depression is one of the difficult mental illnesses, and is one of the most common in the US. Over 10 million people suffer from depression alone and that number is steadily rising."
+        "Depression is one of the difficult mental illnesses, and is one of the most common in the US. Over 10 million people suffer from depression alone and that number is steadily rising. Depression is a mental health disorder characterized by persistently depressed mood or loss of interest in activities, causing significant impairment in daily life. Depression can be caused by many things including: faulty mood regulation by the brain, genetic vulnerability, stressful life events, medications, medical problems, and chemical imbalances. It's a dangerous state of mind and the more we understand it the better."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zacNqkrKeXRG"
+      },
+      "source": [
+        "#Research Questions and Data\n",
+        "We will analyze the attributes of peoples lives, similarities and differences, and comparing each of their MADRS(Montgomery–Åsberg Depression Rating Scale) scores. The question will be: What set of variables in someone's life makes them most depressed?\n",
+        "We will use our knowledge of data science (via Python) to download the data and analyze all the variables, searching for which variables influence others the most."
       ]
     }
   ]
